<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_id"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        android:layout_marginStart="30dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="5dp"
        android:elevation="3dp">
        <EditText
            android:id="@+id/txtID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"
            android:hint="@string/id"
            android:padding="10dp"
            android:textSize="14sp"
            tools:ignore="Autofill,TextContrastCheck,TextFields,TouchTargetSizeCheck" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_name"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="5dp"
        android:elevation="3dp">
        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"
            android:hint="@string/name"
            android:padding="10dp"
            android:textSize="14sp"
            tools:ignore="Autofill,TextContrastCheck,TouchTargetSizeCheck" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_program"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="5dp"
        android:elevation="3dp">
        <EditText
            android:id="@+id/txtProgram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"
            android:hint="@string/program"
            android:padding="10dp"
            android:textSize="14sp"
            tools:ignore="Autofill,TextContrastCheck,TextFields,TouchTargetSizeCheck" />

    </androidx.cardview.widget.CardView>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/teal_700"
            android:gravity="center"
            android:text="@string/add" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:backgroundTint="@color/teal_700"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:backgroundTint="@color/teal_700"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnViewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:backgroundTint="@color/teal_700"
            android:layout_gravity="center"/>











    </LinearLayout>

</LinearLayout>